Controller As Migration Part 3

--- a/src/Directives/Solutions/Requires/index.html
+++ b/src/Directives/Solutions/Requires/index.html
@@ -4,7 +4,7 @@
         <title>Require Directives</title>
         <link href="/common/css/bootstrap/bootstrap.css" type="text/css" rel="stylesheet"/>
     </head>
-    <body ng-controller="HomeController">
+    <body ng-controller="HomeController as HomeCtrl">
         <h1>Directives</h1>
 
         <!-- 
@@ -12,7 +12,7 @@
             and then create a template to adequately display the team information
         -->
         <container>
-           <pane header="team.Name" ng-repeat="team in teams">
+           <pane header="team.Name" ng-repeat="team in HomeCtrl.teams">
                     <ul>
                         <li><b>Name:</b> {{team.Name}}</li>
                         <li><b>League:</b> {{team.League}}</li>
