--- a/src/Directives/Solutions/Transclusion/index.html
+++ b/src/Directives/Solutions/Transclusion/index.html
@@ -4,7 +4,7 @@
         <title>Transclude Directives</title>
         <link href="/common/css/bootstrap/bootstrap.css" type="text/css" rel="stylesheet"/>
     </head>
-    <body ng-controller="HomeController">
+    <body ng-controller="HomeController as HomeCtrl">
         <h1>Directives</h1>
 
         <!-- 
@@ -14,7 +14,7 @@
              
         <div class="container-fluid">
             <div class="row">
-                <pane header="team.Name" ng-repeat="team in teams">
+                <pane header="team.Name" ng-repeat="team in HomeCtrl.teams">
                     <ul>
                         <li><b>Name:</b> {{team.Name}}</li>
                         <li><b>League:</b> {{team.League}}</li>
