--- a/src/Filters/Exercises/Simple/index.html
+++ b/src/Filters/Exercises/Simple/index.html
@@ -3,7 +3,7 @@
      <head>
         <title>Filter App</title>
     </head>
-    <body ng-controller="MainController">
+    <body ng-controller="MainController as MainCtrl">
         <h1>Filter Controller with Sort</h1>
         
         <!-- 
