--- a/src/Filters/Samples/Controller/index.html
+++ b/src/Filters/Samples/Controller/index.html
@@ -3,7 +3,7 @@
      <head>
         <title>Event Handlers</title>
     </head>
-    <body ng-controller="MainController">
+    <body ng-controller="MainController as MainCtrl">
         <h1>Event Handlers</h1>
 
         <table>
@@ -16,23 +16,23 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="one in people">
+                <tr ng-repeat="one in MainCtrl.people">
                     <td>{{one.Name}}</td>
                     <td>{{one.Age}}</td>
                     <td>{{one.Gender}}</td>
-                    <td><input type="button" value="X" ng-click="remove(one, $event)" /></td>
+                    <td><input type="button" value="X" ng-click="MainCtrl.remove(one, $event)" /></td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <td><input type="text" ng-model="addPerson.Name" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/></td>
-                    <td><input type="number" ng-model="addPerson.Age" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/></td>
-                    <td><input type="radio" name="gender" id="female" value="Female" ng-model="addPerson.Gender" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/>
+                    <td><input type="text" ng-model="MainCtrl.addPerson.Name" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
+                    <td><input type="number" ng-model="MainCtrl.addPerson.Age" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
+                    <td><input type="radio" name="gender" id="female" value="Female" ng-model="MainCtrl.addPerson.Gender" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/>
                         <label for="female">Female</label><br />
-                        <input type="radio" name="gender" id="male" value="Male" ng-model="addPerson.Gender" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/>
+                        <input type="radio" name="gender" id="male" value="Male" ng-model="MainCtrl.addPerson.Gender" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/>
                         <label for="male">Male</label>
                     </td>
-                    <td><input type="button" value="+" ng-click="add($event)" /></td>
+                    <td><input type="button" value="+" ng-click="MainCtrl.add($event)" /></td>
                 </tr>
             </tfoot>
         </table>
