--- a/src/Directives/Solutions/Validators/pages/detail.html
+++ b/src/Directives/Solutions/Validators/pages/detail.html
@@ -26,51 +26,51 @@
             <form name="EditProducts" novalidate>
                 <div class="form-group">
                     <label for="name">Product ID</label>
-                    <input type="number" class="form-control" name="productID" placeholder="Product ID" ng-model="product.productID" required check-product-id />
+                    <input type="number" class="form-control" name="productID" placeholder="Product ID" ng-model="DetailCtrl.product.productID" required check-product-id />
                 </div>
                 <div class="form-group">
                     <label for="productName">Product Name</label>
-                    <input type="text" class="form-control" name="productName" placeholder="Product Name" ng-model="product.productName" required />
+                    <input type="text" class="form-control" name="productName" placeholder="Product Name" ng-model="DetailCtrl.product.productName" required />
                 </div>
                 <div class="form-group">
                     <label for="supplierID">Supplier ID</label>
-                    <input type="number" class="form-control" name="supplierID" placeholder="Supplier ID" ng-model="product.supplierID" required  positive-number range upper="200" lower="0"/>
+                    <input type="number" class="form-control" name="supplierID" placeholder="Supplier ID" ng-model="DetailCtrl.product.supplierID" required  positive-number range upper="200" lower="0"/>
                 </div>
                 <div class="form-group">
                     <label for="quantityPerUnit">Quantity Per Unit</label>
-                    <input type="text" class="form-control" name="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="product.quantityPerUnit" />
+                    <input type="text" class="form-control" name="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="DetailCtrl.product.quantityPerUnit" />
                 </div>
                 <div class="form-group">
                     <label for="unitPrice">Unit Price</label>
-                    <input type="number" class="form-control" name="unitPrice" placeholder="Unit Price" ng-model="product.unitPrice" />
+                    <input type="number" class="form-control" name="unitPrice" placeholder="Unit Price" ng-model="DetailCtrl.product.unitPrice" />
                 </div>
                 <div class="form-group">
                     <label for="unitsInStock">Units In Stock</label>
-                    <input type="number" class="form-control" name="unitsInStock" placeholder="Units In Stock" ng-model="product.unitsInStock" />
+                    <input type="number" class="form-control" name="unitsInStock" placeholder="Units In Stock" ng-model="DetailCtrl.product.unitsInStock" />
                 </div>
                 <div class="form-group">
                     <label for="unitsOnOrder">Units On Order</label>
-                    <input type="number" class="form-control" name="unitsOnOrder" placeholder="Units On Order" ng-model="product.unitsOnOrder"/>
+                    <input type="number" class="form-control" name="unitsOnOrder" placeholder="Units On Order" ng-model="DetailCtrl.product.unitsOnOrder"/>
                 </div>
                 <div class="form-group">
                     <label for="reorderLevel">Reorder Level</label>
-                    <input type="number" class="form-control" name="reorderLevel" placeholder="Reorder Level" ng-model="product.reorderLevel"/>
+                    <input type="number" class="form-control" name="reorderLevel" placeholder="Reorder Level" ng-model="DetailCtrl.product.reorderLevel"/>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" name="isDiscontinued" ng-value="true" ng-model="product.discontinued" />
+                    <input type="radio" name="discontinued" name="isDiscontinued" ng-value="true" ng-model="DetailCtrl.product.discontinued" />
                     This product has been discontinued
                 </label>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" name="isNotDiscontinued" ng-value="false" ng-model="product.discontinued" checked />
-                    This product is stil active
+                    <input type="radio" name="discontinued" name="isNotDiscontinued" ng-value="false" ng-model="DetailCtrl.product.discontinued" checked />
+                    This product is still active
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()" ng-submit ng-disabled="EditProducts.$invalid && EditProducts.$submitted">Submit</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
-                 <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
+                <button type="submit" class="btn btn-primary pull-right" ng-click="DetailCtrl.save()" ng-submit ng-disabled="EditProducts.$invalid && EditProducts.$submitted">Submit</button>
+                <button type="submit" class="btn btn-danger" ng-click="DetailCtrl.delete()" ng-disabled="!DetailCtrl.isUpdating">Delete</button>
+                <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
             </form>
         </div>
     </div>
