--- a/src/Filters/Samples/Ordering/index.html
+++ b/src/Filters/Samples/Ordering/index.html
@@ -3,24 +3,24 @@
      <head>
         <title>Filter App</title>
     </head>
-    <body ng-controller="MainController">
+    <body ng-controller="MainController as MainCtrl">
         <h1>Filter Controller with Sort</h1>
         <h2>Filter By:</h2>
         <ul>
-            <li>By Name: <input type="text" ng-model="criteria.Name" /></li>
-            <li>By Age: <input type="number" ng-model="criteria.Age" /></li>
-            <li>By Gender:  <input type="radio" ng-model="criteria.Gender" name="female" id="female" value="Female" />
+            <li>By Name: <input type="text" ng-model="MainCtrl.criteria.Name" /></li>
+            <li>By Age: <input type="number" ng-model="MainCtrl.criteria.Age" /></li>
+            <li>By Gender:  <input type="radio" ng-model="MainCtrl.criteria.Gender" name="female" id="female" value="Female" />
                             <label for="female">Female</label>
-                            <input type="radio" ng-model="criteria.Gender" name="male" id="male" value="Male" />
+                            <input type="radio" ng-model="MainCtrl.criteria.Gender" name="male" id="male" value="Male" />
                             <label for="male">Male</label></li>
         </ul>
 
         <h2>Order By:</h2>
          <ul>
-            <li>Sort On: <select name="order" ng-options="one for one in availableForSort track by one" ng-model="sortOn"></select></li>
-            <li>Direction:  <input type="radio" ng-model="sortDirection" name="asc" id="asc" ng-value="false" />
+            <li>Sort On: <select name="order" ng-options="one for one in MainCtrl.availableForSort track by one" ng-model="MainCtrl.sortOn"></select></li>
+            <li>Direction:  <input type="radio" ng-model="MainCtrl.sortDirection" name="asc" id="asc" ng-value="false" />
                             <label for="asc">Asc</label>
-                            <input type="radio" ng-model="sortDirection" name="desc" id="desc" ng-value="true" />
+                            <input type="radio" ng-model="MainCtrl.sortDirection" name="desc" id="desc" ng-value="true" />
                             <label for="desc">Desc</label></li>
         </ul>
 
@@ -34,7 +34,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="one in people | filter:criteria | orderBy:sortOn:sortDirection">
+                <tr ng-repeat="one in MainCtrl.people | filter:MainCtrl.criteria | orderBy:MainCtrl.sortOn:MainCtrl.sortDirection">
                     <td>{{one.Name}}</td>
                     <td>{{one.Age}}</td>
                     <td>{{one.Gender}}</td>
