--- a/src/Filters/Samples/ReusableFilter/index.html
+++ b/src/Filters/Samples/ReusableFilter/index.html
@@ -3,14 +3,14 @@
      <head>
         <title>Filter App</title>
     </head>
-    <body ng-controller="MainController">
+    <body ng-controller="MainController as MainCtrl">
         <h1>Filter Controller</h1>
         <h2>Filter By:</h2>
         <ul>
-            <li>By Name: <input type="text" ng-model="filter.Name" /></li>
-            <li>By Gender:  <input type="radio" ng-model="filter.Gender" name="female" id="female" value="Female" />
+            <li>By Name: <input type="text" ng-model="MainCtrl.filter.Name" /></li>
+            <li>By Gender:  <input type="radio" ng-model="MainCtrl.filter.Gender" name="female" id="female" value="Female" />
                             <label for="female">Female</label>
-                            <input type="radio" ng-model="filter.Gender" name="male" id="male" value="Male" />
+                            <input type="radio" ng-model="MainCtrl.filter.Gender" name="male" id="male" value="Male" />
                             <label for="male">Male</label></li>
         </ul>
 
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="one in people | filter:filter | overTheHill">
+                <tr ng-repeat="one in MainCtrl.people | filter:MainCtrl.filter | overTheHill">
                     <td>{{one.Name}}</td>
                     <td>{{one.Age}}</td>
                     <td>{{one.Gender}}</td>
