--- a/src/Forms/Exercises/NgModelOptions/pages/detail.html
+++ b/src/Forms/Exercises/NgModelOptions/pages/detail.html
@@ -55,7 +55,7 @@
                 <div class="radio">
                 <label>
                     <input type="radio" name="discontinued" id="isNotDiscontinued" value="false" ng-model="product.discontinued">
-                    This product is stil active
+                    This product is still active
                 </label>
                 </div>
                 <div class="btn-container">
