--- a/src/Forms/Samples/Validation/pages/stateTile.tpl.html
+++ b/src/Forms/Samples/Validation/pages/stateTile.tpl.html
@@ -3,5 +3,5 @@
 <div>Capital: {{state.capital}}</div>
 <div>Largest City: {{state.mostPopulousCity}}</div>
 <div class="btn-container">
-    <a href ng-click="selectState(state)" adp-button="secondary">edit</a>
+    <a href ng-click="ListCtrl.selectState(state)" adp-button="secondary">edit</a>
 </div>
