--- a/src/Forms/Solutions/Validation/pages/productTile.tpl.html
+++ b/src/Forms/Solutions/Validation/pages/productTile.tpl.html
@@ -1,4 +1,4 @@
 <div>Quantity: {{product.quantityPerUnit}}</div>
 <div class="btn-container">
-    <a href ng-click="selectProduct(product)" adp-button="secondary">edit</a>
+    <a href ng-click="ListCtrl.selectProduct(product)" adp-button="secondary">edit</a>
 </div>
