--- a/src/Controllers/Samples/NgClick/index.html
+++ b/src/Controllers/Samples/NgClick/index.html
@@ -27,11 +27,11 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td><input type="text" ng-model="addPerson.Name" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
-                    <td><input type="number" ng-model="addPerson.Age" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
-                    <td><input type="radio" name="gender" id="female" value="Female" ng-model="addPerson.Gender" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/>
+                    <td><input type="text" ng-model="MainCtrl.addPerson.Name" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
+                    <td><input type="number" ng-model="MainCtrl.addPerson.Age" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
+                    <td><input type="radio" name="gender" id="female" value="Female" ng-model="MainCtrl.addPerson.Gender" ng-focus="MainCtrl.handleEvent($event)" ng-blur="handleEvent($event)"/>
                         <label for="female">Female</label><br />
-                        <input type="radio" name="gender" id="male" value="Male" ng-model="addPerson.Gender" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/>
+                        <input type="radio" name="gender" id="male" value="Male" ng-model="MainCtrl.addPerson.Gender" ng-focus="MainCtrl.handleEvent($event)" ng-blur="handleEvent($event)"/>
                         <label for="male">Male</label>
                     </td>
                     <td><input type="button" value="+" ng-click="MainCtrl.add($event)" /></td>
