--- a/src/Directives/Samples/Transclusion/index.html
+++ b/src/Directives/Samples/Transclusion/index.html
@@ -8,10 +8,11 @@
         <h1>Directives</h1>
 
 
-        
+
         <div class="container-fluid">
             <div class="row">
-                <pane header="HomeCtrl.people[0].Name">
+                <pane header="HomeCtrl.people[0].Name" sub-title="HomeCtrl.message">
+                  <h4>{{HomeCtrl.message}}</h4>
                     <ul>
                         <li><b>Name:</b> {{HomeCtrl.people[0].Name}}</li>
                         <li><b>Age:</b> {{HomeCtrl.people[0].Age}}</li>
