--- a/src/Directives/Samples/Variables/index.html
+++ b/src/Directives/Samples/Variables/index.html
@@ -26,6 +26,11 @@
 
         <evaluator></evaluator>
 
+         <some-other value="letterA"></some-other><br />
+         <some-other-one value="letterA"></some-other-one><br />
+
+         <input type="text" ng-model="letterA" />
+
         <script src="/common/js/jquery/jquery.js"></script>
         <script src="/common/js/angular/angular.js"></script>
         <script src="directives/directives.js"></script>
